--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <div id="outer-box">
         <div id="heading">
-          <img src="./assets/images/image-omelette.jpeg" alt="main-image" />
+          <img src="./image-omelette.jpeg" alt="main-image" />
           <h1 id="header">Simple Omelette Recipe</h1>
           <p>
             An easy and quick dish, perfect for any meal. This classic omelette
